[tool.poetry]
name = "pycozo"
version = "0.7.6"
description = ""
authors = ["Julep AI developers <developers@julep.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipython = "^8.29.0"
httpx = "^0.27.2"
cozo-embedded = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
